feat(delete-comment): add comment deletion functionality  (#50)
 - add tests
 - add swagger doc
 - add tests for delete feature
 - correct swagger error

[Delivers #168050016]
